# Oxygen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
assets/: OxygenClicker.desktop
include/core/: Clicker.h  ClickerState.h
include/input/: HotkeyManager.h
include/platform/: Platform.h
include/ui/: UI.h
src/: main.cpp
src/core/: Clicker.cpp
src/input/: HotkeyManager.cpp
src/input/linux/: HotkeyLinux.cpp
src/input/windows/: HotkeyWindows.cpp
src/platform/linux/: PlatformLinux.cpp
src/platform/windows/: PlatformWindows.cpp
src/ui/: UI.cpp
